--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@tinymce/tinymce-vue": "^2.1.0",
     "axios": "^0.19.0",
     "element-ui": "^2.10.0",
+    "js-base64": "latest",
+    "js-cookie": "^2.2.0",
     "tinymce": "^5.0.9",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.1.1",
-    "js-base64": "latest"
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
