--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "js-cookie": "^2.2.0",
     "tinymce": "^5.0.9",
     "vue": "^2.5.2",
+    "vue-cropper": "^0.4.9",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
   },
